cluster/apps/yadunut-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yadunut-dev
  namespace: yadunut-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: yadunut-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yadunut-dev
    spec:
      imagePullSecrets:
        - name: yadunut-dev-harbor
      containers:
        - name: yadunut-dev
          image: harbor.yadunut.dev/yadunut/gleam_nut-site:main@sha256:eb7e51153a1cac2c20f6a53672cb60efcde70423da53e27ab9ada06176d67886 # {"$imagepolicy": "flux-system:yadunut-dev"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
