cluster/apps/yadunut-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yadunut-dev
  namespace: yadunut-dev
spec:
  selector:
    app.kubernetes.io/name: yadunut-dev
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
