cluster/apps/yadunut-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yadunut-dev
  namespace: yadunut-dev
spec:
  ingressClassName: traefik
  rules:
    - host: yadunut.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yadunut-dev
                port:
                  name: http
  tls:
    - hosts:
        - yadunut.dev
      secretName: yadunut-dev-tls
